<resources>
    <string name="app_name">My Application</string>
    <string name="expensify">Expensify</string>
    <string name="email">Enter your email</string>
    <string name="profile_image" />
    <string name="expenses">Expenses</string>
    <string name="budgets">Budgets</string>
    <string name="_65_of_budget_used">65% of budget used</string>
    <string name="_0_00">$0.00</string>
    <string name="monthly_budget">Monthly Budget</string>
    <string name="current_balance">Current Balance</string>
    <string name="username">Username</string>
    <string name="user_example_com">user@example.com</string>
    <string name="about">About</string>
    <string name="add">Add</string>
    <string name="add_budget">Add Budget</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="categories">Categories</string>
    <string name="export_data">Export</string>
    <string name="help">Help</string>
    <string name="history">History</string>
    <string name="manage">Manage</string>
    <string name="manage_budgets">Manage Budgets</string>
    <string name="manage_expenses">Manage Expenses</string>
    <string name="settings">Settings</string>
    <string name="reports">Reports</string>
    <string name="overview_list_description">overview_list</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="action_export" />
    <string name="export" />
    <string name="nav_header_desc" />
</resources>